Add Netlify functions for CORS proxy

--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "slopulator",
   "version": "1.0.0",
-  "description": "The SLOPULATOR - Retro Property Evaluation Tool",
   "scripts": {
-    "start": "python3 -m http.server 8765",
-    "test": "echo 'Tests? This is retro, we don't need no stinkin' tests!'"
+    "start": "npx serve .",
+    "build": "echo 'No build needed'"
   },
-  "keywords": ["real-estate", "calculator", "retro", "geocities", "slopulator"],
-  "author": "Bradley @ Brash Properties",
-  "license": "MIT"
+  "devDependencies": {
+    "serve": "^14.0.0"
+  }
 }
