--- a/netlify.toml
+++ b/netlify.toml
@@ -8,6 +8,11 @@
   port = 8888
 
 [[redirects]]
+  from = "/.netlify/*"
+  to = "/:splat"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
